// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/SeparatorLine Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container-separator color-base"
  >
    <hr
      className="separator-line color-base size-sm"
      title={null}
    />
  </div>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-sm"
      title={null}
    />
  </div>
  <div
    className="container-separator color-secondary"
  >
    <hr
      className="separator-line color-secondary size-sm"
      title={null}
    />
  </div>
  <div
    className="container-separator color-tertiary"
  >
    <hr
      className="separator-line color-tertiary size-sm"
      title={null}
    />
  </div>
  <div
    className="container-separator color-inverted"
  >
    <hr
      className="separator-line color-inverted size-sm"
      title={null}
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/SeparatorLine Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-sm"
      title={null}
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/SeparatorLine Size 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-xs"
      title={null}
    />
  </div>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-sm"
      title={null}
    />
  </div>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-md"
      title={null}
    />
  </div>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-lg"
      title={null}
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/SeparatorLine Titel Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container-separator color-base"
  >
    <hr
      className="separator-line color-base size-sm"
      title="separator"
    />
    <div
      className="title"
    >
      <header
        className="headings color-base size-md weight-bold"
      >
        separator
      </header>
    </div>
  </div>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-sm"
      title="separator"
    />
    <div
      className="title"
    >
      <header
        className="headings color-primary size-md weight-bold"
      >
        separator
      </header>
    </div>
  </div>
  <div
    className="container-separator color-secondary"
  >
    <hr
      className="separator-line color-secondary size-sm"
      title="separator"
    />
    <div
      className="title"
    >
      <header
        className="headings color-secondary size-md weight-bold"
      >
        separator
      </header>
    </div>
  </div>
  <div
    className="container-separator color-tertiary"
  >
    <hr
      className="separator-line color-tertiary size-sm"
      title="separator"
    />
    <div
      className="title"
    >
      <header
        className="headings color-tertiary size-md weight-bold"
      >
        separator
      </header>
    </div>
  </div>
  <div
    className="container-separator color-inverted"
  >
    <hr
      className="separator-line color-inverted size-sm"
      title="separator"
    />
    <div
      className="title"
    >
      <header
        className="headings color-inverted size-md weight-bold"
      >
        separator
      </header>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/SeparatorLine Titel Sizes 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-xs"
      title="separator"
    />
    <div
      className="title"
    >
      <header
        className="headings color-primary size-md weight-bold"
      >
        separator
      </header>
    </div>
  </div>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-sm"
      title="separator"
    />
    <div
      className="title"
    >
      <header
        className="headings color-primary size-md weight-bold"
      >
        separator
      </header>
    </div>
  </div>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-md"
      title="separator"
    />
    <div
      className="title"
    >
      <header
        className="headings color-primary size-md weight-bold"
      >
        separator
      </header>
    </div>
  </div>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-lg"
      title="separator"
    />
    <div
      className="title"
    >
      <header
        className="headings color-primary size-md weight-bold"
      >
        separator
      </header>
    </div>
  </div>
</div>
`;
